--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JzfShrinkPic</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
@@ -18,7 +18,7 @@
         <div id="previewArea" class="preview-area">
             <div class="placeholder-content">
                 <div class="icon-large">↓</div>
-                <h2>Drop or Paste Image</h2>
+                <h1>Drop or Paste Image</h1>
                 <p class="subtext">Privacy Focused. Offline.</p>
             </div>
             <img id="imagePreview" class="hidden" alt="Preview">
@@ -85,7 +85,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3>Settings</h3>
-                <button id="closeSettings" class="btn-icon">✕</button>
+                <button id="closeSettings" class="btn-icon" aria-label="Close Settings">✕</button>
             </div>
             
             <div class="setting-item">
