--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <div class="about-section">
                 <h4>About JzfShrinkPic</h4>
-                <p>Version 1.0.0</p>
+                <p id="versionDisplay">Version 1.0.0</p>
                 <ul>
                     <li>✅ 100% Offline (Client-side)</li>
                     <li>✅ Metadata (EXIF) Stripped automatically</li>
@@ -122,6 +122,7 @@
         </div>
     </div>
 
+    <script src="version.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
