--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 
             <!-- Footer / Settings Trigger -->
             <div class="footer-controls">
+                <button id="installBtn" class="btn-icon hidden" aria-label="Install App">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                    </svg>
+                </button>
                 <button id="settingsBtn" class="btn-icon" aria-label="Settings">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="3"></circle>
@@ -118,6 +125,10 @@
                     <li>✅ Metadata (EXIF) Stripped automatically</li>
                     <li>✅ No Server Uploads</li>
                 </ul>
+                <div id="iosGuide" class="hidden" style="margin-top: 15px; border-top: 1px solid var(--border-color); padding-top: 10px;">
+                    <strong>Install on iOS:</strong><br>
+                    Tap Share <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle;"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg> then "Add to Home Screen"
+                </div>
             </div>
         </div>
     </div>
