--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>JzfShrinkPic</title>
     <link rel="manifest" href="/manifest.json" />
+    <meta name="description" content="Privacy-focused offline image compression that runs entirely on your device." />
     <meta name="theme-color" content="#121212" />
+    <meta name="color-scheme" content="dark light" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   </head>
   <body>
