--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>JzfShrinkPic</title>
+    <title>ShrinkPic</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="description" content="Privacy-focused offline image compression that runs entirely on your device." />
     <meta name="theme-color" content="#121212" />
